@@ -1,3 +1,7 @@
+2005-09-25  Derek Price  <derek@ximbiot.com>
+
+	* lstat.m4: Update from GNULIB.
+
 2005-09-19  Derek Price  <derek@ximbiot.com>
 
 	Update from GNULIB.
